--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.show-sql=true
+# Every 5 minutes
+expired.links.cron=0 0/5 * * * ?
